boreal/tests/assets/invalid_files/compilation/invalid_identifier_type5.yar
// [error: invalid identifier type]
import "math"

rule c {
    condition:
        math[2] == /aab/
}

